# jar2dll-jar-to-dll-forge-fabric

./: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  PROJECT_STRUCTURE.md  README.md  README_EN.md  README_RU.md  build.gradle  settings.gradle
convert/: README.md  convert.bat
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt
src/main/cpp/include/: injector.h
src/main/cpp/src/: injector.cpp  main.cpp
src/main/cpp/stub_classes/: injector.h  jar.h
src/main/java/git/fowin/injectors/: FabricInjector.java  ForgeInjector.java
src/main/java/git/fowin/tools/: HeaderConverter.java  ModTypeDetector.java
